--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,6 +5,9 @@
 	<title>My HCI Friends</title>	
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/bootstrap.css">
+	<link rel="stylesheet" href="css/bootstrap-theme.css">
+	<link rel="stylesheet" href="css/hci-friends.css">
 	
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -16,8 +19,30 @@
 </head>
 
 <body>
+<div class="container">
 	<h1>My HCI Friends</h1>
-
+	
+	{{#each friends}}
+	<div class="row friend text-center">
+		<div class="row text-center">
+			<div class="col-lg-12">
+				<img class="img-responsive" src="{{imageURL}}" alt="">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<a href="#"><h3>{{name}}</h3></a> 	
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-12">
+				<h3>{{description}}</h3>
+			</div>
+		</div>
+		<hr>
+	</div>
+	{{/each}}
+	
 	<form id="addFriendForm" role="form" method="get" action="/add">
 		<h3>Add a friend</h3>
 	    <div class="form-group">
@@ -30,5 +55,18 @@
 	    </div>
 	    <input type="submit" id="submitBtn" class="btn btn-default" value="Add the friend"></input>
 	</form>
+</div>
+	
+	<script src="./js/jquery-1.11.0.js"></script>
+	<script src="./js/bootstrap.js"></script>
+	<script src="./js/hci-friends.js"></script>
+	<script>
+	$('a').click(function(event) {
+		event.preventDefault();
+		var text = $(this).text();
+		var name = anagrammedName(text);
+		$(this).text(name);
+	})
+	</script>
 </body>
 </html>
